# GameEngine

./: .gitignore  CMakeLists.txt  README.md  sonar-project.properties  vcpkg.json
.github/workflows/: build.yml  cmake.yml
Editor/: CMakeLists.txt
Editor/src/: Application.cpp  Application.hpp  Main.cpp
Engine/: CMakeLists.txt
Sandbox/: CMakeLists.txt
Sandbox/src/: Application.cpp  Application.hpp  Main.cpp
